some minor code cleanup of MarshallerService, NexusScanMetadataWriter
Change-Id: I6e297d083a89cb03ce1aee9b20ece2504e3239d6